--- a/ui.apps/src/main/content/jcr_root/apps/practice/components/UserDetailForm/UserDetailForm.html
+++ b/ui.apps/src/main/content/jcr_root/apps/practice/components/UserDetailForm/UserDetailForm.html
@@ -3,13 +3,18 @@
 <sly data-sly-use.clientLib="/libs/granite/sightly/templates/clientlib.html"></sly>
 <sly data-sly-call="${clientLib.all @ categories='user-detail-table'}"></sly>
 <body>
-<table id="customers" data-sly-use.tableVlaue ="com.javadoubts.core.models.UserDetailFormModel">
+<table class="custom-table" id="customers" data-sly-use.tableVlaue ="com.javadoubts.core.models.UserDetailFormModel">
+
+  <thead>
   <tr>
     <th>First Name</th>
     <th>Last Name</th>
     <th>Email</th>
     <th>Contact No</th>
   </tr>
+  </thead>
+
+ <tbody>
   <div data-sly-list.response="${tableVlaue.responseValue}">
   <tr>
     <td>${response.firstName}</td>
@@ -18,7 +23,7 @@
     <td>${response.conactNo}</td>
   </tr>
   </div>
-
+<tbody>
 </table>
 </body>
 </html>
