--- a/ui.apps/src/main/content/jcr_root/apps/practice/components/aemSimpleForm/aemSimpleForm.html
+++ b/ui.apps/src/main/content/jcr_root/apps/practice/components/aemSimpleForm/aemSimpleForm.html
@@ -1,21 +1,19 @@
-<h1>AEM USER FORM PLACEHOLER</h1>
+<h1> AEM Simple Form Component </h1>
 
 <sly data-sly-use.clientLib="/libs/granite/sightly/templates/clientlib.html"></sly>
-<sly data-sly-call="${clientLib.all @ categories='user-form'}"></sly>
+<sly data-sly-call="${clientLib.all @ categories='aem-simple-form'}"></sly>
 <div>
   <form>
     <label for="fname">First Name</label>
     <input type="text" id="fname" name="firstname" placeholder="Your name.."><br><br>
-
     <label for="lname">Last Name</label>
     <input type="text" id="lname" name="lastname" placeholder="Your last name.."><br><br>
-
-    <label for="lname">Email</label>
-    <input type="text" id="email" name="email" placeholder="Your email address.."><br><br>
-
-    <label for="lname">Address</label>
+    <label for="email">Email Address</label>
+    <input type="text" id="email" name="email" placeholder="Your email.."><br><br>
+    <label for="contact">Contact Info</label>
+    <input type="text" id="contact" name="contact" placeholder="Your contact info.."><br><br>
+    <label for="address">Address</label>
     <input type="text" id="address" name="address" placeholder="Your address.."><br><br>
-  
-    <input type="submit" value="Submit" id="user-custom-form">
+    <input type="submit" value="Submit" id="aem-simple-form">
   </form>
 </div>
