--- a/ui.apps/src/main/content/jcr_root/apps/practice/components/HeaderComponent/HeaderComponent.html
+++ b/ui.apps/src/main/content/jcr_root/apps/practice/components/HeaderComponent/HeaderComponent.html
@@ -1,11 +1,11 @@
-<div data-emptytext="Header Component" class="cq-placeholder">
-  <sly data-sly-use.clientLib="/libs/granite/sightly/templates/clientlib.html"></sly>
-  <sly data-sly-call="${clientLib.css @ categories='Header-Component'}"></sly>
-  <sly data-sly-use.headerElememt="com.javadoubts.core.models.HeaderComponent">
-  <div class="header logo">
-          <img src="${headerElememt.logoimg}" alt="Logo"/>
-       <div class="header-right" data-sly-list.navItem="${headerElememt.navigation}">
-            <a href="${navItem.headerlink}">${navItem.headertitle}</a>
-       </div>
+
+<sly data-sly-use.clientlib="/libs/granite/sightly/templates/clientlib.html" 
+    data-sly-call="${clientlib.all @ categories='header-component'}"/>
+<div class="header">
+  <a href="#default" class="logo">CompanyLogo</a>
+  <div class="header-right">
+    <a class="active" href="#home">Home</a>
+    <a href="#contact">Contact</a>
+    <a href="#about">About</a>
   </div>
-  </sly>
+</div>
